[REFACTOR] Allow frontend connection